added multiple (incomplete) pages to app and to Master Detail Page menu.  Created and added app logo

--- a/beach_day/beach_day.Android/beach_day.Android.csproj
+++ b/beach_day/beach_day.Android/beach_day.Android.csproj
@@ -92,13 +92,15 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\beach_day\beach_day.csproj">
       <Project>{5CC38EDF-2333-41FE-91A3-FF6EB0531FB6}</Project>
       <Name>beach_day</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\beachDayLogo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
