--- a/beach_day/beach_day/beach_day.csproj
+++ b/beach_day/beach_day/beach_day.csproj
@@ -28,5 +28,8 @@
     <EmbeddedResource Update="ItemChecklist.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="MoreWeatherInfoPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
