created beaches and addBeach template pages.  they sitll need to be implemented.  implemented TanningTool, but still need to fix a few bugs for it.

--- a/beach_day/beach_day/beach_day.csproj
+++ b/beach_day/beach_day/beach_day.csproj
@@ -21,7 +21,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Beaches.xaml.cs">
+      <DependentUpon>Beaches.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="About.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="AddBeachPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Beaches.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="BeachFacts.xaml">
