added vibration and sound to the Tanning Tool Interval Alert.

--- a/beach_day/beach_day.iOS/beach_day.iOS.csproj
+++ b/beach_day/beach_day.iOS/beach_day.iOS.csproj
@@ -181,4 +181,13 @@
   <ItemGroup>
     <BundleResource Include="Resources\GuitarGroveEdit.mp3" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\poweredbyoneline.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\beachDayLogo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\AlarmSound.mp3" />
+  </ItemGroup>
 </Project>
