--- a/beach_day/beach_day.Android/beach_day.Android.csproj
+++ b/beach_day/beach_day.Android/beach_day.Android.csproj
@@ -126,5 +126,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\poweredbyoneline.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\AlarmSound.mp3" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
