--- a/beach_day/beach_day.iOS/beach_day.iOS.csproj
+++ b/beach_day/beach_day.iOS/beach_day.iOS.csproj
@@ -170,6 +170,9 @@
       <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms.GoogleMaps">
+      <Version>3.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms.Maps">
       <Version>3.4.0.1008975</Version>
     </PackageReference>
@@ -192,5 +195,8 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\AlarmSound.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CustomRenderers\" />
   </ItemGroup>
 </Project>
