--- a/beach_day/beach_day.Android/Properties/AndroidManifest.xml
+++ b/beach_day/beach_day.Android/Properties/AndroidManifest.xml
@@ -10,7 +10,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="beach_day.Android">
 		<uses-library android:name="org.apache.http.legacy" android:required="false" />
-		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="" /> <!-- Insert API key here -->
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="" /> <!-- Insert google maps SDK for android API key here -->
     <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 	</application>
 </manifest>
